meta-monitor-manager: avoid current_switch_config value reset

When applying a new switch_config, mark it as pending until
we are handling the monitors-changed event. At that point, mark
it as complete and update MetaMonitorManager accordingly.

This fixes current_switch_config being set to UNKNOWN when
a display config switch is made by the user pressing the display switch
hotkeys. The previous behaviour of immediately and unconditionally
resetting current_switch_config to UNKNOWN was breaking the internal
state machine for display config switching, causing misbehaviour in
gnome-shell's switchMonitor UI.

https://gitlab.gnome.org/GNOME/mutter/issues/281