src/backends/meta-monitor-manager.c
@@ -2619,9 +2619,19 @@ meta_monitor_manager_read_current_state (MetaMonitorManager *manager)
 }
 
 static void
-meta_monitor_manager_notify_monitors_changed (MetaMonitorManager *manager)
+meta_monitor_manager_notify_monitors_changed (MetaMonitorManager *manager,
+                                              MetaMonitorsConfig *config)
 {
-  manager->current_switch_config = META_MONITOR_SWITCH_CONFIG_UNKNOWN;
+  if (config)
+    {
+      MetaMonitorSwitchConfigType switch_config =
+        meta_monitors_config_get_pending_switch_config (config);
+      if (switch_config != META_MONITOR_SWITCH_CONFIG_UNKNOWN)
+        {
+          manager->current_switch_config = switch_config;
+          meta_monitors_config_switch_config_complete (config);
+        }
+    }
 
   meta_backend_monitors_changed (manager->backend);
 
@@ -2702,7 +2712,7 @@ meta_monitor_manager_rebuild (MetaMonitorManager *manager,
 
   meta_monitor_manager_update_logical_state (manager, config);
 
-  meta_monitor_manager_notify_monitors_changed (manager);
+  meta_monitor_manager_notify_monitors_changed (manager, config);
 
   g_list_free_full (old_logical_monitors, g_object_unref);
 }
@@ -2744,7 +2754,7 @@ meta_monitor_manager_rebuild_derived (MetaMonitorManager *manager,
 
   meta_monitor_manager_update_logical_state_derived (manager, config);
 
-  meta_monitor_manager_notify_monitors_changed (manager);
+  meta_monitor_manager_notify_monitors_changed (manager, config);
 
   g_list_free_full (old_logical_monitors, g_object_unref);
 }
@@ -2959,7 +2969,7 @@ meta_monitor_manager_switch_config (MetaMonitorManager          *manager,
     }
   else
     {
-      manager->current_switch_config = config_type;
+      config->pending_switch_config = config_type;
     }
   g_object_unref (config);
 }
